style: enhance hover effects in TaskPreview component for better visibility style: ensure consistent z-index and background color in GroupFooterSummary component

--- a/src/assets/styles/components/group/GroupFooterSummary.scss
+++ b/src/assets/styles/components/group/GroupFooterSummary.scss
@@ -18,6 +18,7 @@
     position: sticky;
     left:0;
     background-color: rgb(255, 255, 255);
+    z-index: 500;
 }
 
 .group-footer-summary-item-wrapper {
