--- a/src/assets/styles/components/task/TaskPreview.scss
+++ b/src/assets/styles/components/task/TaskPreview.scss
@@ -13,16 +13,18 @@
 
 .task-preview:hover .task-checkbox-wrapper,
 .task-preview:hover .task-preview-item-wrapper,
-.task-preview:hover .task-preview-last-cell {
-    background-color: rgb(247, 247, 247);
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+.task-preview:hover .task-preview-last-cell,
+.task-preview:hover .task-title,
+.task-preview:hover .task-title-sidebar-button {
+    background-color: rgba(209, 217, 225, 0.343);
+    box-shadow: 0 3px 8px -2px rgba(0, 0, 0, 0.13);
 
 }
 
 .task-preview:hover .task-title {
     z-index: 5;
-    background-color: rgb(247, 247, 247);
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+    background-color: rgba(209, 217, 225, 0.343);
+    box-shadow: 0 3px 8px -2px rgba(0, 0, 0, 0.13);
 }
 
 .task-preview-item-wrapper {
